# python-project-template

./: .gitignore  README.md  main.py  makefile  pyproject.toml
.github/workflows/: main.yml
src/: hello.py  makefile
tests/: test_hello.py
