[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["Cameron Wong"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8.1"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
